@startuml

title クラス図

class Firework {
    Particle

}

class Sequence {
    List<Firework> firework

    launch(){}
}

class FireworksMonitor {
    Cannon[3] _cannon
    List<Sequence> _sequences


}

class Cannon{
    int _howManyExecution
    Sequence _sequence
    
    resetSequence(){シークエンスを最初から再生}
    launch(int _howManyExecution){指定した番号を発射}
    setSequence(int cannon, Sequence)
    
    
}

class BallStateMonitor {
    BallState[3] _balls

    BallUpdate(int num){ボールの状態を更新する}

    
}

class BallState{
    float _howCharged
    color _color

    ballCharge(, float howCharge)
    resetBallCharge()
    setBallColor(, Color color)
    resetBallColor()
}

class UdpReceiver{
    getData(return float[])

}

class KeyInputMonitor{
    BallStateMonitor _ballStateMonitor
    FireworksMonitor _fireworksMonitor

    Launch(int num)
}

Firework "n" --o "1" Sequence
Sequence "n" --o "1" FireworksMonitor

BallStateMonitor "1" -- "1" FireworksMonitor

UdpReceiver "3" --o "1" BallStateMonitor
BallState "3" --o "1" BallStateMonitor
Cannon "3" --o "1" FireworksMonitor

KeyInputMonitor "1" -- "1" FireworksMonitor
KeyInputMonitor "1" -- "1" BallStateMonitor






@enduml